--- a/tests/units.html
+++ b/tests/units.html
@@ -9,23 +9,23 @@
     <h1>Unit Test Results</h1>
     <section>
       <header class="overview">
-        <div class="browser">Browser: HeadlessChrome 77.0.3865 (Windows 10.0.0)</div>
-        <div class="timestamp">Timestamp: 10/7/2019, 12:11:54 PM</div>
+        <div class="browser">Browser: Chrome 77.0.3865 (Windows 10.0.0)</div>
+        <div class="timestamp">Timestamp: 10/7/2019, 3:20:51 PM</div>
         <p class="results">
           16 tests / 
           0 errors / 
           0 failures / 
           0 skipped / 
-          runtime: 2.45s
+          runtime: 1.086s
         </p>
       </header>
       <div class="spec spec--pass" style="">
         <h3 class="spec__header">
           <div class="spec__title">
-            <p class="spec__suite">HomeComponent</p>
+            <p class="spec__suite">LogoutComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.318s</div>
+          <div class="spec__status">Passed in 0.1s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -34,25 +34,16 @@
             <p class="spec__suite">AppComponent</p>
             <em class="spec__descrip">should create the app</em>
           </div>
-          <div class="spec__status">Passed in 0.826s</div>
+          <div class="spec__status">Passed in 0.355s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
         <h3 class="spec__header">
           <div class="spec__title">
-            <p class="spec__suite">ManagerComponent</p>
+            <p class="spec__suite">HomeComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.551s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">NavigationMenuComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.042s</div>
+          <div class="spec__status">Passed in 0.02s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -61,31 +52,22 @@
             <p class="spec__suite">ProfileComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.047s</div>
+          <div class="spec__status">Passed in 0.019s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
         <h3 class="spec__header">
           <div class="spec__title">
-            <p class="spec__suite">LogoutComponent</p>
+            <p class="spec__suite">InventoryComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.035s</div>
+          <div class="spec__status">Passed in 0.22s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
         <h3 class="spec__header">
           <div class="spec__title">
-            <p class="spec__suite">ManagerHomeComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.029s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">StockEntryComponent</p>
+            <p class="spec__suite">NavigationMenuComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
           <div class="spec__status">Passed in 0.026s</div>
@@ -97,52 +79,7 @@
             <p class="spec__suite">InventoryHomeComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.023s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">CategoriesComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.028s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">ProductsComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.038s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">InventoryComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.39s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">PageNotFoundComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.026s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">PosComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.029s</div>
+          <div class="spec__status">Passed in 0.022s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -157,14 +94,77 @@
       <div class="spec spec--pass" style="">
         <h3 class="spec__header">
           <div class="spec__title">
+            <p class="spec__suite">ManagerComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.198s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
             <p class="spec__suite">UserManagementComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.021s</div>
+          <div class="spec__status">Passed in 0.019s</div>
         </h3>
       </div>
-      <div class="system-out"><strong>System output:</strong><br />HeadlessChrome 77.0.3865 (Windows 10.0.0) WARN: 'The "longpress" event cannot be bound because Hammer.JS is not loaded and no custom loader has been specified.'
-<br />HeadlessChrome 77.0.3865 (Windows 10.0.0) WARN: 'The "longpress" event cannot be bound because Hammer.JS is not loaded and no custom loader has been specified.'
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">ProductsComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.011s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">PageNotFoundComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.018s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">CategoriesComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.012s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">PosComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.015s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">StockEntryComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.016s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">ManagerHomeComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.014s</div>
+        </h3>
+      </div>
+      <div class="system-out"><strong>System output:</strong><br />Chrome 77.0.3865 (Windows 10.0.0) WARN: 'The "longpress" event cannot be bound because Hammer.JS is not loaded and no custom loader has been specified.'
+<br />Chrome 77.0.3865 (Windows 10.0.0) WARN: 'The "longpress" event cannot be bound because Hammer.JS is not loaded and no custom loader has been specified.'
 </div>
     </section>
   </body>
