--- a/tests/units.html
+++ b/tests/units.html
@@ -10,76 +10,29 @@
     <section>
       <header class="overview">
         <div class="browser">Browser: Chrome 77.0.3865 (Windows 10.0.0)</div>
-        <div class="timestamp">Timestamp: 10/7/2019, 3:20:51 PM</div>
+        <div class="timestamp">Timestamp: 10/7/2019, 3:29:15 PM</div>
+        <p class="results"/>
+      </header>
+    </section>
+    <section>
+      <header class="overview">
+        <div class="browser">Browser: Chrome 77.0.3865 (Windows 10.0.0)</div>
+        <div class="timestamp">Timestamp: 10/7/2019, 3:29:29 PM</div>
         <p class="results">
           16 tests / 
           0 errors / 
           0 failures / 
           0 skipped / 
-          runtime: 1.086s
+          runtime: 1.154s
         </p>
       </header>
       <div class="spec spec--pass" style="">
         <h3 class="spec__header">
           <div class="spec__title">
-            <p class="spec__suite">LogoutComponent</p>
+            <p class="spec__suite">ManagerComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.1s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">AppComponent</p>
-            <em class="spec__descrip">should create the app</em>
-          </div>
-          <div class="spec__status">Passed in 0.355s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">HomeComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.02s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">ProfileComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.019s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">InventoryComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.22s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">NavigationMenuComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.026s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">InventoryHomeComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.022s</div>
+          <div class="spec__status">Passed in 0.455s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -88,25 +41,16 @@
             <p class="spec__suite">ReceiptLookupComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.021s</div>
+          <div class="spec__status">Passed in 0.03s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
         <h3 class="spec__header">
           <div class="spec__title">
-            <p class="spec__suite">ManagerComponent</p>
+            <p class="spec__suite">PosComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.198s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">UserManagementComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.019s</div>
+          <div class="spec__status">Passed in 0.025s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -115,7 +59,7 @@
             <p class="spec__suite">ProductsComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.011s</div>
+          <div class="spec__status">Passed in 0.017s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -130,28 +74,10 @@
       <div class="spec spec--pass" style="">
         <h3 class="spec__header">
           <div class="spec__title">
-            <p class="spec__suite">CategoriesComponent</p>
+            <p class="spec__suite">InventoryComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.012s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">PosComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.015s</div>
-        </h3>
-      </div>
-      <div class="spec spec--pass" style="">
-        <h3 class="spec__header">
-          <div class="spec__title">
-            <p class="spec__suite">StockEntryComponent</p>
-            <em class="spec__descrip">should create</em>
-          </div>
-          <div class="spec__status">Passed in 0.016s</div>
+          <div class="spec__status">Passed in 0.186s</div>
         </h3>
       </div>
       <div class="spec spec--pass" style="">
@@ -160,11 +86,94 @@
             <p class="spec__suite">ManagerHomeComponent</p>
             <em class="spec__descrip">should create</em>
           </div>
-          <div class="spec__status">Passed in 0.014s</div>
+          <div class="spec__status">Passed in 0.018s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">NavigationMenuComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.013s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">LogoutComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.013s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">StockEntryComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.024s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">HomeComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.016s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">AppComponent</p>
+            <em class="spec__descrip">should create the app</em>
+          </div>
+          <div class="spec__status">Passed in 0.258s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">UserManagementComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.025s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">InventoryHomeComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.022s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">CategoriesComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.018s</div>
+        </h3>
+      </div>
+      <div class="spec spec--pass" style="">
+        <h3 class="spec__header">
+          <div class="spec__title">
+            <p class="spec__suite">ProfileComponent</p>
+            <em class="spec__descrip">should create</em>
+          </div>
+          <div class="spec__status">Passed in 0.016s</div>
         </h3>
       </div>
       <div class="system-out"><strong>System output:</strong><br />Chrome 77.0.3865 (Windows 10.0.0) WARN: 'The "longpress" event cannot be bound because Hammer.JS is not loaded and no custom loader has been specified.'
 <br />Chrome 77.0.3865 (Windows 10.0.0) WARN: 'The "longpress" event cannot be bound because Hammer.JS is not loaded and no custom loader has been specified.'
+</div>
+      <div class="system-errors"><strong>Errors:</strong><br />DisconnectedClient disconnected from CONNECTED state (transport error)
 </div>
     </section>
   </body>
